--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                   <h2 class="mb-4">It's Web_Aryan</h2>
                   <p class="mb-4">
                     
-                   In a World Where Everyone Shows and Tells Everything, else me because i was little bit introvert.
-                    But you was Different because You were clear to everything About you. but my mind can't Accept what ever that's happening. </p>
+                   In a World Where Everyone Shows and Tells Everything, else me.
+                    But you were different because you were clear about everything about yourself. But my mind can't accept what's happening. </p>
 
                   <p class="mb-0">
-                  Today exactly two weeks are completed. but this 2 week was very difficult or horrible for mine. thousands of thoughts was Coming in my mind. i was getting stuff. whole day an can't able to Sleep 😴 <br>
-                  whole day I was fell down & losing interest from everything. at that time i really want to talk with you but I can't. an at the end i was hope less. i can't explain anything more what's was happening with me. <br>
-                  <br>please forgive me for all of that. Sorry.</p>
+                  Today, exactly two weeks have passed. But these 2 weeks were very difficult or horrible for me. Thousands of thoughts were coming into my mind. I was getting stuff. whole day and can't able to sleep 😴 <br>
+                  whole day I was feeling down & losing interest in everything. At that time, I wanted to talk with you, but I couldn't. an at the end, I was hopeless. I can't explain anything more about what was happening with me. <br>
+                  <br> Please forgive me for all of that. Sorry.</p>
                 </div>
                 <div class="intro-right">
                   <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
