--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="intro-left tm-bg-dark">
                   <h2 class="mb-4">It's Web_Aryan</h2>
 
-                    <p>Post<time>09:00:22</time> to <time>24:01:2025</time></p>
+                    <p>Post on <time>24/01/2025. 09:01 Pm</time></p>
 
          <p class="mb-4">
                     
