--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
         <ul class="cd-hero-slider mb-0 py-5">
           <li class="px-3" data-page-no="1">
             <div class="page-width-1 page-left">
+                <p>Post on: <time>24/01/2025. 09:01 pm</time></p>
               <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container">
                 <div class="intro-left tm-bg-dark">
                   <h2 class="mb-4">It's Web_Aryan</h2>
 
-                    <p>Post on <time>24/01/2025. 09:01 Pm</time></p>
+                    
 
          <p class="mb-4">
                     
