--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     But you were different because you were clear about everything about yourself. But my mind can't accept what's happening. </p>
 
                   <p class="mb-0">
-                  Today, exactly two weeks have passed. But these 2 weeks were very difficult or horrible for me. Thousands of thoughts were coming into my mind. I was getting stuff. whole day and can't able to sleep 😴 <br>
+                  Today, exactly two weeks have passed. But these 2 weeks were very difficult or horrible for me. Thousands of thoughts were coming into my mind. I was getting stuff. whole day and can't able to sleep. <br>
                   whole day I was feeling down & losing interest in everything. At that time, I wanted to talk with you, but I couldn't. an at the end, I was hopeless. I can't explain anything more about what was happening with me. <br>
                   <br> Please forgive me for all of that. Sorry.</p>
                 </div>
